fix image spacing

--- a/css/client.css
+++ b/css/client.css
@@ -23,10 +23,6 @@ p {
   margin-bottom: 0.1rem;
 }
 
-img {
-  margin-right: 0.1rem;
-}
-
 button {
   margin-right: 0.3rem;
 }
